ProblemGrounder project:
relative paths to python scripts moved to configuration file
removed trace/log logging
python version changed from 2.7 to 3.5